--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,7 +72,9 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
-                        Here goes the author description. You might want to place some links too in here
+                        <a href="https://www.instagram.com/marquis_flostre/">
+                            Follow me on my instagram~
+                        </a>
                     </p>
                 </section>
             {% endif %}
