--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -72,6 +72,7 @@ post_class: post-template
                     <h4> {{ site.author }} </h4>
                     <!-- Author Bio -->
                     <p>
+                        Contact with marquisfffff@gmail.com
                         <a href="https://www.instagram.com/marquis_flostre/">
                             Follow me on my instagram~
                         </a>
